--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -10,9 +10,16 @@
 <h3>Doses:</h3>
 <% @cocktail.doses.each do |dose| %>
   <%= dose.description %>
+  <%= link_to "Delete", dose_path(dose),
+    method: :delete,
+    data: { confirm: "Are you sure?" } %>
 <% end %>
 
 <%= link_to "Back to list", cocktails_path %>
 
 <%= link_to "Add a dose", new_cocktail_dose_path(@cocktail) %>
+
+
+
+
 
