--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,19 @@
-<h1>Cocktails#index</h1>
+<div class="home-banner">
+  <h1>Cocktails</h1>
+</div>
 
-<ol>
-  <% @cocktails.each do |cocktail| %>
-  <li>
-  <%= link_to cocktail.name, cocktail_path(cocktail) %>
-  </li>
-  <% end %>
-</ol>
+<div class="container">
+    <ol>
+      <% @cocktails.each do |cocktail| %>
+      <li>
+      <%= link_to cocktail.name, cocktail_path(cocktail) %>
+    </li>
+    <% end %>
+  </ol>
+</div>
 
 <%= link_to "Add cocktail", new_cocktail_path %>
+
+</div>
+
+
