--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,6 +2,8 @@
 
 <p>Name: <%= @cocktail.name %></p>
 
+<%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
+
 <h2>Ingredient Description:</h2>
 <% @cocktail.ingredients.each do |ingredient| %>
   <%= ingredient.name %>
