--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,5 +1,5 @@
 .home-banner {
-  background-image: url("cocktailsubs-internal-header.jpg");
+  background-image: image-url("cocktailsubs-internal-header.jpg");
   background-size: cover;
   height: 75vh;
   color: #eee;
